--- a/workspace/WeAC/src/main/res/layout/fm_add_city.xml
+++ b/workspace/WeAC/src/main/res/layout/fm_add_city.xml
@@ -26,7 +26,8 @@
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="19dp"
+        android:layout_marginLeft="19dp"
+        android:layout_marginRight="19dp"
         android:queryHint="请输入城市名称"
         />
 
@@ -41,211 +42,47 @@
 
     <View
         style="@style/divider_line_wea"
-        android:layout_height="1dp"
+        android:layout_height="0.5dp"
         android:layout_marginLeft="19dp"
         android:layout_marginRight="19dp"
         android:layout_marginTop="5dp"
         />
 
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/more_city_btn"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout
-                style="@style/hot_city_item_llyt"
-                >
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center">
-
-                    <TextView
-                        style="@style/hot_city_item_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_weight="0"
-                        android:drawableLeft="@drawable/ic_gps"
-                        android:drawablePadding="5dp"
-                        android:text="@string/location"/>
-                </LinearLayout>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/beijing"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/tianjin"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/shanghai"/>
-            </LinearLayout>
-
-            <LinearLayout
-                style="@style/hot_city_item_llyt"
-                >
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/guangzhou"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/shenzhen"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/chongqing"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/fuzhou"/>
-            </LinearLayout>
-
-            <LinearLayout
-                style="@style/hot_city_item_llyt"
-                >
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/xian"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/nanning"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/kunming"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/jinan"/>
-            </LinearLayout>
-
-            <LinearLayout
-                style="@style/hot_city_item_llyt"
-                >
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/wuhan"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/haikou"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/sanya"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/changchun"/>
-            </LinearLayout>
-
-            <LinearLayout
-                style="@style/hot_city_item_llyt"
-                >
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/hefei"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/zhengzhou"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/taiyuan"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/nanchang"/>
-            </LinearLayout>
-
-            <LinearLayout
-                style="@style/hot_city_item_llyt"
-                >
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/lasa"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/xining"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/shijiazhuang"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/haerbin"/>
-            </LinearLayout>
-
-            <LinearLayout
-                style="@style/hot_city_item_llyt"
-                >
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/qingdao"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/wuxi"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/xiamen"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/changsha"/>
-            </LinearLayout>
-
-            <LinearLayout
-                style="@style/hot_city_item_llyt"
-                >
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/hangzhou"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/xianggang"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/aomen"/>
-
-                <TextView
-                    style="@style/hot_city_item_tv"
-                    android:text="@string/taibei"/>
-            </LinearLayout>
+            android:layout_height="48dp"
+            android:layout_marginTop="20dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/bg_gv_city_manage">
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginLeft="19dp"
-                android:layout_marginRight="19dp"
-                android:background="@drawable/bg_gv_city_manage"
+                android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="@string/more_city"
                 android:textColor="@color/white_trans90"
-                android:textSize="16sp"/>
+                android:textSize="16sp"
+                />
         </LinearLayout>
-    </ScrollView>
 
+
+        <GridView
+            android:id="@+id/gv_add_city"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/more_city_btn"
+            android:numColumns="4">
+
+        </GridView>
+    </RelativeLayout>
 </LinearLayout>
