--- a/workspace/WeAC/src/main/res/layout/fm_city_manage.xml
+++ b/workspace/WeAC/src/main/res/layout/fm_city_manage.xml
@@ -42,6 +42,7 @@
         android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:horizontalSpacing="10dp"
+        android:listSelector="@android:color/transparent"
         android:numColumns="3"
         android:verticalSpacing="10dp">
 
