--- a/workspace/WeAC/src/main/res/drawable/bg_gv_city_manage.xml
+++ b/workspace/WeAC/src/main/res/drawable/bg_gv_city_manage.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="5dp"/>
-    <solid android:color="@android:color/transparent"/>
-    <stroke
-        android:width="1dp"
-        android:color="@color/white_trans20"/>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-</shape>
+    <item android:drawable="@drawable/shape_circle_gv_city_manage_pressed" android:state_pressed="true"/>
+    <item android:drawable="@drawable/shape_circle_gv_city_manage"/>
+
+</selector>
