--- a/workspace/WeAC/src/main/res/values/stytles_wea.xml
+++ b/workspace/WeAC/src/main/res/values/stytles_wea.xml
@@ -50,7 +50,7 @@
 
     <style name="wea_forecast_content_degree_rlyt">
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">38dp</item>
+        <item name="android:layout_height">40dp</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:layout_marginLeft">10dp</item>
     </style>
@@ -58,6 +58,7 @@
     <style name="wea_forecast_content_degree_rlyt_tv">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
         <item name="android:textColor">@color/white_trans90</item>
         <item name="android:text">@string/dash_degree</item>
         <item name="android:textSize">14sp</item>
