--- a/workspace/WeAC/src/main/res/layout/gv_city_manage.xml
+++ b/workspace/WeAC/src/main/res/layout/gv_city_manage.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="150dp"
-              android:background="@drawable/bg_gv_city_manage"
-              android:orientation="vertical">
+<FrameLayout
+    android:id="@+id/background"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="150dp">
+
+    <ImageView
+        android:id="@+id/city_delete_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="20dp"
+        android:paddingRight="20dp"
+        android:src="@drawable/ic_delete_btn"
+        android:visibility="gone"/>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/bg_gv_city_manage">
 
         <LinearLayout
             android:id="@+id/city_weather"
@@ -22,8 +35,8 @@
                 android:layout_width="match_parent"
                 android:gravity="center"
                 android:paddingBottom="10dp"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
+                android:paddingLeft="3dp"
+                android:paddingRight="3dp"
                 android:paddingTop="10dp"
                 android:singleLine="true"
                 android:text="@string/dash"
@@ -52,9 +65,16 @@
 
             <TextView
                 android:id="@+id/weather_type_tv"
-                style="@style/wea_forecast_content_detail"
-                android:padding="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:paddingBottom="10dp"
+                android:paddingLeft="3dp"
+                android:paddingRight="3dp"
+                android:paddingTop="10dp"
+                android:singleLine="true"
                 android:text="@string/no"
+                android:textColor="@color/white_trans90"
                 android:textSize="16sp"/>
         </LinearLayout>
 
@@ -67,4 +87,4 @@
             android:visibility="gone"/>
     </FrameLayout>
 
-</LinearLayout>
+</FrameLayout>
