wea fm life index layout alter

--- a/workspace/WeAC/src/main/res/values/stytles_wea.xml
+++ b/workspace/WeAC/src/main/res/values/stytles_wea.xml
@@ -158,7 +158,7 @@
     <style name="wea_days_forecast_iv">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
     </style>
 
