weather alarm time and add city quickly return

--- a/workspace/WeAC/src/main/res/values/color.xml
+++ b/workspace/WeAC/src/main/res/values/color.xml
@@ -33,7 +33,7 @@
     <!-- 黑色：80 -->
     <color name="black_trans90">#E6000000</color>
     <!-- 黑色：90 -->
-    <color name="red">#FF0000</color>
+    <color name="red">#E6FF0000</color>
     <!-- 红色 -->
     <color name="gray_background_color">#F4F4F4</color>
     <!-- 灰色1 -->
