--- a/workspace/WeAC/src/main/res/values/styles_new_alarm_clock.xml
+++ b/workspace/WeAC/src/main/res/values/styles_new_alarm_clock.xml
@@ -162,7 +162,7 @@
         <item name="android:layout_marginRight">20dp</item>
         <item name="android:layout_marginBottom">10dp</item>
         <item name="android:layout_marginTop">10dp</item>
-        <item name="android:background">@color/dark_blue_line</item>
+        <item name="android:background">@color/dark_blue</item>
     </style>
 
     <style name="sure_cancel_btn">
