--- a/workspace/WeAC/src/main/res/layout/gv_city_manage.xml
+++ b/workspace/WeAC/src/main/res/layout/gv_city_manage.xml
@@ -30,9 +30,9 @@
             <TextView
                 android:id="@+id/city_name"
                 style="@style/wea_forecast_title"
-                android:layout_width="match_parent"
                 android:layout_alignParentTop="true"
-                android:gravity="center"
+                android:layout_centerInParent="true"
+                android:drawablePadding="2dp"
                 android:paddingBottom="10dp"
                 android:paddingLeft="3dp"
                 android:paddingRight="3dp"
