auto complete textView1

--- a/workspace/WeAC/src/main/res/layout/activity_add_city.xml
+++ b/workspace/WeAC/src/main/res/layout/activity_add_city.xml
@@ -22,13 +22,17 @@
 
     </RelativeLayout>
 
-    <SearchView
-        android:id="@+id/searchView"
+    <AutoCompleteTextView
+        android:completionThreshold="1"
+        android:id="@+id/auto_complete_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="19dp"
         android:layout_marginRight="19dp"
-        android:queryHint="请输入城市名称"
+        android:hint="请输入城市名称"
+        android:textColor="@color/white_trans90"
+        android:textSize="16sp"
         />
 
     <TextView
