--- a/workspace/WeAC/src/main/res/values/city_hot.xml
+++ b/workspace/WeAC/src/main/res/values/city_hot.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="city">
+    <string-array name="city_hot">
         <item>定位</item>
         <item>北京</item>
         <item>天津</item>
