--- a/workspace/WeAC/src/main/res/layout/gv_city_manage.xml
+++ b/workspace/WeAC/src/main/res/layout/gv_city_manage.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/city_name"
                 style="@style/wea_forecast_title"
                 android:drawablePadding="2dp"
+                android:gravity="center"
                 android:paddingLeft="3dp"
                 android:paddingRight="3dp"
                 android:paddingTop="8dp"
