--- a/workspace/WeAC/src/main/res/layout/fm_record_rename.xml
+++ b/workspace/WeAC/src/main/res/layout/fm_record_rename.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/dialog_llyt" >
+<LinearLayout style="@style/dialog_llyt"
+              xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
         style="@style/dialog_title"
-        android:text="@string/rename" />
+        android:text="@string/rename"/>
 
     <EditText
         android:id="@+id/record_rename_edit_text"
@@ -19,9 +19,10 @@
         android:maxLines="2"
         android:padding="8dp"
         android:selectAllOnFocus="true"
-        android:textColorHighlight="@color/dark_blue_foucus"
-        android:textCursorDrawable="@drawable/frame_edit_text"
-        android:textSize="18sp" />
+        android:textColor="@color/black_text_normal_common"
+        android:textColorHighlight="@color/dark_blue_focus"
+        android:textCursorDrawable="@drawable/cursor_record_rename"
+        android:textSize="18sp"/>
 
     <TextView
         android:id="@+id/record_rename_error"
@@ -32,8 +33,8 @@
         android:layout_marginTop="10dp"
         android:textColor="@color/red"
         android:textSize="16sp"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
-    <include layout="@layout/btn_dialog_sure_cancel" />
+    <include layout="@layout/btn_dialog_sure_cancel"/>
 
 </LinearLayout>
