--- a/workspace/WeAC/src/main/res/values/color.xml
+++ b/workspace/WeAC/src/main/res/values/color.xml
@@ -47,7 +47,7 @@
     <!-- 灰色4 -->
     <color name="gray_nap_edit">#808080</color>
     <!-- 灰色5 -->
-    <color name="gray_ring_select_title">#4B4B4B</color>
+    <color name="black_text_normal_common">#4B4B4B</color>
     <!-- 灰色6 -->
     <color name="darkgray">#A9A9A9</color>
     <!-- 灰色 -->
@@ -67,7 +67,7 @@
     <!-- 深蓝色:确定按钮 -->
     <color name="dark_blue_trans40">#660080ff</color>
     <!-- 深蓝色:40 -->
-    <color name="dark_blue_foucus">#400080ff</color>
+    <color name="dark_blue_focus">#400080ff</color>
     <!-- 深蓝色:文字焦点25 -->
     <color name="dark_blue_invalidate">#990080ff</color>
     <!-- 深蓝色:确定按钮不可用60 -->
