search more city  change from xml read3

--- a/workspace/WeAC/src/main/res/layout/lv_search_city.xml
+++ b/workspace/WeAC/src/main/res/layout/lv_search_city.xml
@@ -21,7 +21,8 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:paddingBottom="16dp"
-    android:paddingLeft="10dp"
+    android:paddingLeft="9dp"
+    android:paddingRight="9dp"
     android:paddingTop="16dp"
     android:textColor="@color/white_trans40"
     android:textSize="16sp"/>
