--- a/workspace/WeAC/src/main/res/values/color.xml
+++ b/workspace/WeAC/src/main/res/values/color.xml
@@ -63,23 +63,25 @@
     <!-- 蓝绿色:闹铃响起关闭按钮 50 -->
     <color name="blue_green60">#9A0CCDF6</color>
     <!-- 蓝绿色:闹铃响起关闭按钮 60 -->
-    <color name="dark_blue">#0080ff</color>
-    <!-- 深蓝色:确定按钮 -->
     <color name="dark_blue_trans40">#660080ff</color>
     <!-- 深蓝色:40 -->
-    <color name="dark_blue_focus">#400080ff</color>
+    <color name="dark_blue_focus">#403F51B5</color>
     <!-- 深蓝色:文字焦点25 -->
-    <color name="dark_blue_invalidate">#990080ff</color>
+    <color name="dark_blue_invalidate">#993F51B5</color>
     <!-- 深蓝色:确定按钮不可用60 -->
-    <color name="dark_blue_button_pressed">#0066ff</color>
+    <color name="dark_blue">#3F51B5</color>
+    <!-- 深蓝色:确定按钮 -->
+    <color name="dark_blue_button_pressed">#303F9F</color>
     <!-- 深蓝色:确定按钮按下 -->
-    <color name="dark_blue_line">#0090ff</color>
-    <!-- 深蓝色:录音详细分割线 -->
     <color name="blue_tog_btn">#397cbf</color>
     <!-- 深蓝色:toggleBtn -->
     <color name="yellow_hot">#f9c000</color>
     <!-- 暖黄色:白天气温 -->
     <color name="blue_ice">#72abf8</color>
     <!-- 冷蓝色:夜间气温 -->
+
+    <color name="colorPrimary">#009688</color>
+    <color name="colorPrimaryDark">#00796B</color>
+    <color name="colorAccent">#FF4081</color>
 
 </resources>
