--- a/workspace/WeAC/src/main/res/drawable/shape_circle_record_rename_edit_text.xml
+++ b/workspace/WeAC/src/main/res/drawable/shape_circle_record_rename_edit_text.xml
@@ -5,6 +5,6 @@
 
     <stroke
         android:width="1dip"
-        android:color="@color/dark_blue_line" />
+        android:color="@color/dark_blue" />
 
 </shape>
