--- a/workspace/WeAC/src/main/res/values/styles_new_alarm_clock.xml
+++ b/workspace/WeAC/src/main/res/values/styles_new_alarm_clock.xml
@@ -180,7 +180,7 @@
         <item name="android:layout_margin">20dp</item>
         <item name="android:textSize">18sp</item>
         <item name="android:text">@string/roger</item>
-        <item name="android:textColor">@color/gray_background_color</item>
+        <item name="android:textColor">@color/white_trans90</item>
         <item name="android:background">@drawable/bg_btn_sure</item>
     </style>
 
