--- a/workspace/WeAC/src/main/res/values/styles_timer.xml
+++ b/workspace/WeAC/src/main/res/values/styles_timer.xml
@@ -8,4 +8,25 @@
         <item name="android:layout_gravity">center</item>
     </style>
 
+    <style name="timer_btn_quick_llyt">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="timer_btn_quick_tv">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white_trans90</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:drawablePadding">2dp</item>
+    </style>
+
 </resources>
