--- a/workspace/WeAC/src/main/res/values/styles_timer.xml
+++ b/workspace/WeAC/src/main/res/values/styles_timer.xml
@@ -5,7 +5,10 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/bg_timer_button</item>
-        <item name="android:layout_gravity">center</item>
+        <item name="android:gravity">center</item>
+        <item name="android:drawablePadding">5dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white_trans90</item>
     </style>
 
     <style name="timer_btn_quick_llyt">
@@ -24,7 +27,7 @@
         <item name="android:textColor">@color/white_trans90</item>
         <item name="android:paddingTop">10dp</item>
         <item name="android:paddingBottom">10dp</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">12sp</item>
         <item name="android:gravity">center</item>
         <item name="android:drawablePadding">2dp</item>
     </style>
