--- a/workspace/WeAC/src/main/res/values/styles.xml
+++ b/workspace/WeAC/src/main/res/values/styles.xml
@@ -57,6 +57,7 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:alpha">0.9</item>
         <item name="android:layout_marginTop">3dp</item>
         <item name="android:layout_marginBottom">3dp</item>
