--- a/workspace/WeAC/src/main/res/layout/fm_alarm_clock_ontime.xml
+++ b/workspace/WeAC/src/main/res/layout/fm_alarm_clock_ontime.xml
@@ -1,108 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/black_trans50"
-                android:orientation="vertical">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/ontime_time"
+    <com.kaku.weac.view.MySlidingView
+        android:id="@+id/my_sliding_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:textColor="@color/white_trans90"
-        android:textSize="80sp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_height="match_parent"
+        android:background="@color/black_trans50"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/ontime_tag"
+            android:id="@+id/ontime_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="20dp"
             android:gravity="center"
-            android:singleLine="true"
-            android:text="@string/alarm_clock"
             android:textColor="@color/white_trans90"
-            android:textSize="26sp"/>
-
-        <TextView
-            android:id="@+id/ontime_nap"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:paddingBottom="13dp"
-            android:paddingTop="13dp"
-            android:textColor="@color/blue_green"
-            android:textSize="22sp"/>
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/ontime_close"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/bg_alarm_close_btn"
-        android:gravity="center"
-        android:paddingBottom="13dp"
-        android:paddingTop="13dp"
-        android:text="@string/close_alarm_clock"
-        android:textColor="@color/white"
-        android:textSize="22sp"/>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/ontime_close"
-        android:layout_marginBottom="30dp">
+            android:textSize="80sp"/>
 
         <LinearLayout
-            android:id="@+id/weather_info_group"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:visibility="gone">
+            android:layout_centerInParent="true"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/weather_type_tv"
-                style="@style/alarm_clock_on_time_weather_tv"/>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
+                android:id="@+id/ontime_tag"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal">
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="@string/alarm_clock"
+                android:textColor="@color/white_trans90"
+                android:textSize="26sp"/>
 
-                <TextView
-                    android:id="@+id/temperature_tv"
-                    style="@style/alarm_clock_on_time_weather_tv"
-                    android:drawableLeft="@drawable/ic_temp"/>
-
-                <TextView
-                    android:id="@+id/umbrella_tv"
-                    style="@style/alarm_clock_on_time_weather_tv"
-                    android:layout_marginLeft="10dp"
-                    android:drawableLeft="@drawable/ic_lifeindex_umbrella"
-                    android:text="@string/no"/>
-            </LinearLayout>
+            <TextView
+                android:id="@+id/ontime_nap"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingBottom="13dp"
+                android:paddingTop="13dp"
+                android:textColor="@color/blue_green"
+                android:textSize="22sp"/>
         </LinearLayout>
 
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            style="@style/progress_weather"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/sliding_tip"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:indeterminateDuration="1000"
-            android:visibility="gone"/>
-    </FrameLayout>
-</RelativeLayout>
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="30dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/sliding_tip_iv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/sliding_tip_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:gravity="center"
+                android:text="@string/close_alarm_clock"
+                android:textColor="@color/white"
+                android:textSize="18sp"/>
+        </LinearLayout>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/sliding_tip"
+            android:layout_marginBottom="20dp">
+
+            <LinearLayout
+                android:id="@+id/weather_info_group"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <TextView
+                    android:id="@+id/weather_type_tv"
+                    style="@style/alarm_clock_on_time_weather_tv"/>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/temperature_tv"
+                        style="@style/alarm_clock_on_time_weather_tv"
+                        android:drawableLeft="@drawable/ic_temp"/>
+
+                    <TextView
+                        android:id="@+id/umbrella_tv"
+                        style="@style/alarm_clock_on_time_weather_tv"
+                        android:layout_marginLeft="10dp"
+                        android:drawableLeft="@drawable/ic_lifeindex_umbrella"
+                        android:text="@string/no"/>
+                </LinearLayout>
+            </LinearLayout>
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                style="@style/progress_weather"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:indeterminateDuration="1000"
+                android:visibility="gone"/>
+        </FrameLayout>
+    </com.kaku.weac.view.MySlidingView>
+</FrameLayout>
