--- a/workspace/WeAC/src/main/res/drawable/anim_sliding_tip.xml
+++ b/workspace/WeAC/src/main/res/drawable/anim_sliding_tip.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android"
-                android:oneshot="false"
-                android:visible="true">
+                android:oneshot="false">
 
     <item
         android:drawable="@drawable/sliding_tip0"
